--- a/Devlop/public/css/style.css
+++ b/Devlop/public/css/style.css
@@ -21,3 +21,11 @@
 #card-shadow {
     box-shadow: 10px 10px 5px grey;
 }
+
+#nav-bg {
+    background-color: #79a6d2;
+}
+
+#overlay-text {
+    color: #585858
+}
